src/objects/Delivery__c.object
<CustomObject>
    <description>Delivery Object that is associated with a customer and could have one or more deliveries</description>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>DeliveriesCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Priority__c</fullName>
        <label>Delivery Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery with Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Weight__c</fullName>
        <label>Net Weight</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Delivered_Items__c</fullName>
        <description>Total count of deliveries items with delivered status</description>
        <label>Total Delivered Items</label>
        <summaryFilterItems>
            <field>Delivery_Item__c.Delivery_Item_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </summaryFilterItems>
        <summaryForeignKey>Delivery_Item__c.Delivery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Delivery_items__c</fullName>
        <description>Total number of Delivery Items</description>
        <label>Total Delivery items</label>
        <summaryForeignKey>Delivery_Item__c.Delivery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Route__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Delivery_Priority__c</columns>
        <columns>Delivery_Status__c</columns>
        <columns>Total_Delivered_Items__c</columns>
        <columns>Total_Delivery_items__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>